// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
Object {
  "data": Array [
    10,
    5,
    116,
    111,
    107,
    101,
    110,
    18,
    8,
    116,
    114,
    97,
    110,
    115,
    102,
    101,
    114,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given params schema 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      38,
      143,
      225,
      49,
      192,
      231,
      21,
      35,
      236,
      239,
      210,
      253,
      212,
      23,
      251,
      4,
      67,
      101,
      118,
      250,
      195,
      8,
      174,
      90,
      96,
      99,
      132,
      155,
      247,
      194,
      179,
      14,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 1n,
  "params": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        147,
        223,
        226,
        116,
        135,
        86,
        68,
        155,
        192,
        67,
        227,
        167,
        189,
        15,
        188,
        6,
        229,
        131,
        102,
        61,
        17,
        45,
        151,
        238,
        36,
        225,
        228,
        242,
        34,
        222,
        86,
        153,
        57,
        112,
        54,
        70,
        147,
        133,
        161,
        37,
        252,
        77,
        153,
        81,
        69,
        148,
        99,
        112,
        132,
        121,
        119,
        202,
        22,
        133,
        91,
        254,
        224,
        253,
        115,
        203,
        189,
        128,
        115,
        14,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        15,
        236,
        225,
        38,
        176,
        131,
        87,
        222,
        20,
        9,
        251,
        131,
        95,
        170,
        163,
        81,
        224,
        76,
        195,
        211,
        66,
        231,
        4,
        15,
        56,
        191,
        91,
        80,
        69,
        169,
        177,
        73,
        69,
        21,
        53,
        163,
        20,
        246,
        14,
        233,
        81,
        81,
        185,
        158,
        53,
        207,
        109,
        110,
        208,
        136,
        196,
        64,
        74,
        219,
        111,
        86,
        102,
        211,
        102,
        85,
        150,
        247,
        251,
        6,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        13,
        37,
        142,
        145,
        227,
        207,
        90,
        188,
        231,
        232,
        187,
        192,
        207,
        177,
        49,
        35,
        167,
        79,
        1,
        44,
        82,
        31,
        71,
        192,
        46,
        42,
        203,
        118,
        144,
        2,
        61,
        191,
        20,
        237,
        30,
        84,
        55,
        89,
        109,
        227,
        58,
        32,
        153,
        139,
        226,
        156,
        1,
        96,
        106,
        181,
        89,
        83,
        221,
        38,
        191,
        74,
        97,
        155,
        164,
        242,
        219,
        247,
        217,
        12,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        90,
        1,
        152,
        140,
        94,
        205,
        77,
        87,
        215,
        63,
        215,
        81,
        158,
        127,
        41,
        177,
        121,
        236,
        70,
        61,
        21,
        142,
        83,
        207,
        111,
        213,
        57,
        116,
        19,
        52,
        11,
        220,
        107,
        39,
        228,
        134,
        90,
        110,
        77,
        187,
        52,
        68,
        199,
        219,
        19,
        69,
        49,
        243,
        103,
        195,
        69,
        61,
        221,
        214,
        205,
        104,
        195,
        183,
        142,
        231,
        215,
        64,
        205,
        12,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        180,
        139,
        47,
        233,
        41,
        92,
        196,
        86,
        52,
        166,
        26,
        188,
        67,
        45,
        63,
        10,
        220,
        1,
        133,
        215,
        247,
        20,
        124,
        38,
        239,
        195,
        151,
        114,
        182,
        206,
        167,
        10,
        79,
        35,
        135,
        211,
        190,
        30,
        222,
        92,
        74,
        201,
        5,
        43,
        156,
        240,
        156,
        192,
        8,
        98,
        126,
        67,
        28,
        123,
        85,
        119,
        44,
        244,
        159,
        197,
        6,
        130,
        220,
        15,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        121,
        31,
        182,
        33,
        22,
        217,
        23,
        95,
        99,
        83,
        209,
        23,
        120,
        44,
        100,
        48,
        57,
        16,
        182,
        233,
        212,
        196,
        46,
        9,
        189,
        106,
        214,
        11,
        120,
        153,
        197,
        175,
        235,
        115,
        37,
        161,
        67,
        235,
        18,
        160,
        108,
        59,
        16,
        7,
        117,
        31,
        61,
        112,
        19,
        142,
        2,
        248,
        250,
        64,
        94,
        185,
        82,
        151,
        205,
        10,
        236,
        215,
        153,
        3,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        241,
        39,
        20,
        44,
        27,
        251,
        0,
        179,
        125,
        1,
        67,
        201,
        30,
        136,
        117,
        229,
        204,
        32,
        238,
        110,
        36,
        53,
        36,
        118,
        44,
        23,
        76,
        11,
        58,
        77,
        240,
        219,
        251,
        250,
        90,
        165,
        56,
        42,
        9,
        55,
        78,
        118,
        164,
        29,
        148,
        79,
        112,
        249,
        172,
        68,
        72,
        143,
        158,
        27,
        131,
        83,
        17,
        242,
        184,
        123,
        133,
        205,
        249,
        15,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        52,
        74,
        182,
        104,
        157,
        95,
        56,
        9,
        34,
        9,
        9,
        37,
        33,
        233,
        186,
        137,
        152,
        171,
        8,
        28,
        140,
        64,
        155,
        50,
        66,
        180,
        205,
        32,
        158,
        100,
        15,
        171,
        255,
        73,
        154,
        181,
        45,
        138,
        96,
        56,
        154,
        16,
        246,
        108,
        102,
        232,
        60,
        70,
        77,
        189,
        202,
        195,
        92,
        170,
        241,
        86,
        60,
        226,
        83,
        117,
        93,
        158,
        229,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        212,
        248,
        212,
        98,
        119,
        148,
        246,
        3,
        145,
        47,
        171,
        133,
        20,
        209,
        168,
        37,
        12,
        75,
        249,
        197,
        184,
        251,
        173,
        236,
        148,
        34,
        71,
        53,
        172,
        244,
        58,
        3,
        29,
        33,
        75,
        12,
        183,
        209,
        89,
        23,
        24,
        125,
        38,
        78,
        94,
        214,
        12,
        72,
        178,
        33,
        35,
        71,
        161,
        226,
        68,
        158,
        157,
        167,
        234,
        165,
        97,
        129,
        120,
        9,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [],
    "numberOfSignatures": 1,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        197,
        191,
        15,
        112,
        163,
        172,
        239,
        104,
        205,
        89,
        141,
        195,
        161,
        210,
        38,
        95,
        55,
        87,
        172,
        246,
        33,
        38,
        236,
        47,
        166,
        164,
        254,
        126,
        71,
        143,
        132,
        156,
        59,
        230,
        85,
        86,
        192,
        115,
        219,
        248,
        8,
        201,
        206,
        226,
        136,
        0,
        64,
        208,
        110,
        101,
        75,
        59,
        200,
        206,
        250,
        125,
        96,
        247,
        175,
        97,
        29,
        30,
        215,
        13,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        184,
        87,
        197,
        181,
        139,
        161,
        59,
        230,
        18,
        53,
        56,
        224,
        165,
        9,
        112,
        186,
        0,
        39,
        78,
        213,
        126,
        144,
        15,
        240,
        123,
        185,
        113,
        196,
        123,
        181,
        39,
        12,
        33,
        156,
        31,
        205,
        35,
        23,
        251,
        80,
        188,
        227,
        105,
        248,
        132,
        69,
        7,
        80,
        165,
        191,
        105,
        49,
        211,
        140,
        60,
        194,
        140,
        145,
        7,
        64,
        169,
        226,
        77,
        0,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        239,
        245,
        116,
        206,
        129,
        170,
        250,
        155,
        215,
        182,
        34,
        89,
        167,
        137,
        42,
        82,
        110,
        209,
        205,
        8,
        168,
        65,
        134,
        150,
        179,
        80,
        204,
        114,
        100,
        148,
        16,
        229,
        37,
        252,
        177,
        170,
        32,
        195,
        181,
        208,
        227,
        145,
        5,
        13,
        226,
        241,
        133,
        137,
        116,
        6,
        84,
        179,
        11,
        147,
        118,
        72,
        207,
        104,
        134,
        179,
        159,
        187,
        168,
        9,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          255,
          48,
          239,
          64,
          183,
          222,
          66,
          17,
          65,
          55,
          190,
          70,
          241,
          0,
          157,
          48,
          229,
          193,
          152,
          9,
          167,
          61,
          90,
          22,
          43,
          201,
          159,
          126,
          118,
          129,
          214,
          61,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        158,
        48,
        196,
        140,
        194,
        79,
        198,
        76,
        120,
        26,
        223,
        23,
        201,
        239,
        90,
        204,
        31,
        113,
        46,
        210,
        96,
        167,
        160,
        59,
        22,
        177,
        226,
        152,
        131,
        161,
        17,
        39,
        204,
        116,
        145,
        79,
        98,
        99,
        44,
        2,
        54,
        99,
        4,
        36,
        238,
        45,
        29,
        230,
        119,
        249,
        8,
        212,
        15,
        250,
        89,
        224,
        201,
        246,
        238,
        144,
        95,
        37,
        44,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        158,
        48,
        196,
        140,
        194,
        79,
        198,
        76,
        120,
        26,
        223,
        23,
        201,
        239,
        90,
        204,
        31,
        113,
        46,
        210,
        96,
        167,
        160,
        59,
        22,
        177,
        226,
        152,
        131,
        161,
        17,
        39,
        204,
        116,
        145,
        79,
        98,
        99,
        44,
        2,
        54,
        99,
        4,
        36,
        238,
        45,
        29,
        230,
        119,
        249,
        8,
        212,
        15,
        250,
        89,
        224,
        201,
        246,
        238,
        144,
        95,
        37,
        44,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        12,
        109,
        140,
        53,
        203,
        115,
        174,
        110,
        92,
        193,
        42,
        24,
        110,
        85,
        112,
        177,
        108,
        12,
        5,
        167,
        234,
        123,
        148,
        24,
        177,
        68,
        190,
        255,
        251,
        238,
        152,
        65,
        232,
        66,
        235,
        160,
        206,
        106,
        190,
        135,
        200,
        37,
        53,
        105,
        148,
        53,
        207,
        78,
        168,
        170,
        254,
        255,
        105,
        113,
        10,
        84,
        109,
        249,
        50,
        237,
        224,
        108,
        29,
        13,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        81,
        192,
        62,
        209,
        132,
        51,
        224,
        242,
        49,
        71,
        4,
        150,
        210,
        41,
        224,
        141,
        68,
        49,
        195,
        56,
        172,
        50,
        45,
        13,
        135,
        102,
        224,
        90,
        33,
        32,
        200,
        95,
        130,
        71,
        85,
        240,
        190,
        84,
        224,
        54,
        164,
        3,
        129,
        5,
        221,
        237,
        54,
        21,
        221,
        39,
        93,
        133,
        32,
        185,
        23,
        115,
        23,
        223,
        103,
        0,
        123,
        185,
        184,
        4,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        81,
        192,
        62,
        209,
        132,
        51,
        224,
        242,
        49,
        71,
        4,
        150,
        210,
        41,
        224,
        141,
        68,
        49,
        195,
        56,
        172,
        50,
        45,
        13,
        135,
        102,
        224,
        90,
        33,
        32,
        200,
        95,
        130,
        71,
        85,
        240,
        190,
        84,
        224,
        54,
        164,
        3,
        129,
        5,
        221,
        237,
        54,
        21,
        221,
        39,
        93,
        133,
        32,
        185,
        23,
        115,
        23,
        223,
        103,
        0,
        123,
        185,
        184,
        4,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        137,
        160,
        33,
        157,
        243,
        193,
        254,
        179,
        186,
        102,
        92,
        101,
        100,
        89,
        75,
        172,
        20,
        228,
        181,
        228,
        251,
        226,
        255,
        44,
        53,
        103,
        237,
        91,
        48,
        49,
        11,
        184,
        39,
        214,
        105,
        210,
        40,
        183,
        54,
        223,
        47,
        213,
        35,
        214,
        145,
        61,
        218,
        164,
        175,
        151,
        215,
        84,
        170,
        8,
        143,
        155,
        208,
        188,
        74,
        212,
        182,
        41,
        201,
        12,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        218,
        78,
        50,
        142,
        201,
        193,
        103,
        98,
        72,
        71,
        205,
        27,
        223,
        231,
        29,
        76,
        63,
        0,
        134,
        255,
        15,
        92,
        101,
        13,
        20,
        205,
        196,
        28,
        159,
        117,
        130,
        197,
        87,
        47,
        24,
        241,
        228,
        170,
        6,
        148,
        206,
        200,
        94,
        24,
        208,
        181,
        100,
        129,
        155,
        209,
        168,
        8,
        44,
        171,
        62,
        77,
        113,
        233,
        39,
        152,
        52,
        211,
        131,
        15,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        0,
        98,
        8,
        131,
        95,
        219,
        137,
        45,
        26,
        120,
        60,
        72,
        60,
        146,
        189,
        170,
        19,
        23,
        34,
        5,
        23,
        159,
        65,
        40,
        81,
        42,
        147,
        0,
        151,
        58,
        174,
        9,
        165,
        26,
        252,
        192,
        244,
        164,
        45,
        173,
        76,
        185,
        4,
        41,
        118,
        215,
        125,
        48,
        31,
        145,
        185,
        103,
        216,
        221,
        105,
        154,
        178,
        97,
        123,
        177,
        80,
        233,
        238,
        10,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        197,
        25,
        157,
        127,
        76,
        116,
        20,
        73,
        172,
        45,
        109,
        245,
        190,
        28,
        247,
        78,
        52,
        21,
        67,
        13,
        227,
        144,
        50,
        15,
        124,
        122,
        124,
        133,
        181,
        142,
        137,
        132,
        234,
        36,
        205,
        236,
        54,
        206,
        230,
        77,
        39,
        161,
        168,
        73,
        76,
        142,
        94,
        227,
        202,
        38,
        85,
        129,
        82,
        28,
        192,
        93,
        158,
        90,
        244,
        81,
        57,
        16,
        158,
        1,
      ],
      "type": "Buffer",
    },
  ],
}
`;
